<resources>
    <string name="app_name">달려달력</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>

    <string name="calendar_add">달력 추가</string>
    <string name="calendar_edit">달력 수정</string>

    <!-- saveCalendarFragment -->
    <string name="ui_date_format">%d.%d.%d</string>
    <string name="saveCalendar_title">달력 이름</string>
    <string name="saveCalendar_start_date">시작일</string>
    <string name="saveCalendar_end_date">종료일</string>
    <string name="saveCalendar_save">저장</string>
    <string name="saveCalendar_defaultCalendar">기본 캘린더</string>
    <string name="menuSaveCalendarToolbar_delete">삭제</string>

    <!-- view_check_point -->
    <string name="check_point_name">이름</string>
    <string name="check_point_startDate">시작일</string>
    <string name="check_point_endDate">종료일</string>
    <string name="check_point_pickDate">날짜 선택</string>

    <!-- view_check_point_footer-->
    <string name="check_point_footer_save">추가</string>

    <string name="saveSchedule_title">일정 제목</string>
    <string name="saveSchedule_start">시작</string>
    <string name="saveSchedule_end">종료</string>
    <string name="saveSchedule_memo">메모</string>
    <string name="saveSchedule_calendarName">캘린더 명</string>
    <string name="saveSchedule_tagColor">태그 색상</string>
    <string name="saveSchedule_save">저장</string>

    <string name="saveSchedule_notificationNone">없음</string>
    <string name="saveSchedule_notificationTenMinutesAgo">10분 전 알림</string>
    <string name="saveSchedule_notificationAHourAgo">한 시간 전 알림</string>
    <string name="saveSchedule_notificationADayAgo">하루 전 알림</string>

    <string name="saveSchedule_pickDate">요일 선택</string>
    <string name="saveSchedule_pickTime">시간 선택</string>

    <string name="deleteScheduleDialog_title">일정 삭제</string>
    <string name="deleteScheduleDialog_message">일정을 삭제하면 복구할 수 없습니다.\n삭제하시겠습니까?</string>
    <string name="calendar">달력</string>
    <string name="mainCalender_addScheduleDescription">일정 추가 버튼</string>

    <!--  fragment_search_schedule  -->
    <string name="searchSchedule_toolbarHint">일정 검색</string>
    <string name="searchSchedule_noSearchResult">검색된 데이터가 없습니다.</string>

    <!-- nav_main -->
    <string name="mainCalendar_navi_label">메인 캘린더</string>

    <!-- drawer -->
    <string name="drawer_calendar_subTitle">캘린더</string>
    <string name="drawer_calendar_manage">달력 관리</string>
    <string name="drawer_theme_setting">테마 설정</string>

    <string name="toast_schedule_saved">일정이 저장되었습니다</string>
    <string name="toast_schedule_deleted">일정이 삭제되었습니다</string>

    <string name="contentDescription_ivAddSchedule">일정 추가 버튼</string>
    <string name="saveSchedule_toolbarTitle_insert">일정 추가</string>
    <string name="saveSchedule_toolbarTitle_update">일정 수정</string>
    <string name="textColor">글자색</string>
    <string name="weekday">평일</string>
    <string name="holiday">공휴일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>
    <string name="backgroundColor">배경색</string>
    <string name="selectedDayStroke">선택한 요일 테두리</string>
    <string name="dayBackgroundColor">요일 배경</string>
    <string name="text">글자</string>
    <string name="schedule">일정</string>

    <string name="manageCalender_addCalendarDescription">달력 추가 버튼</string>
    <string name="manageCalendar_toolbarTitle_manage">달력 관리</string>
    <string name="textSize">글자 크기</string>
    <string name="alignLocation">정렬 위치</string>
    <string name="language">언어</string>
    <string name="maxDisplayCount">최대 표시 수</string>

    <string name="smallText">10</string>
    <string name="mediumText">14</string>
    <string name="largeText">18</string>
    <string name="start">처음</string>
    <string name="center">중간</string>
    <string name="end">끝</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>

    <string name="deleteCalendar_title">달력 삭제</string>
    <string name="deleteCalendar_message">달력을 삭제하면 복구할 수 없습니다.\n삭제하시겠습니까?</string>

    <string name="reset">초기화</string>
    <string name="resetTheme">테마 초기화</string>
    <string name="resetThemeMessage">테마를 초기화 하시겠습니까?\n\n변경된 내용은 저장되지 않습니다.</string>
    <string name="drawer_license">라이브러리 라이센스</string>

    <string name="calendar_manage_no_data">😥 추가된 달력이 없습니다.\n 달력을 추가해 보세요!</string>
    <string name="calendar_list">달력 목록</string>
    <string name="calendar_slice">슬라이스</string>
    <string name="schedule_no_data">📚 일정이 없습니다.</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
  
    <string name="action_refresh_click">refresh</string>
    <string name="widget_refresh">widget_refresh</string>
    <string name="ACTION_BTN_CLICK">update</string>

    <string name="setting_toolbarTitle">앱 설정</string>
    <string name="info">앱 정보</string>
    <string name="appInfo_developer">제작자</string>
    <string name="appInfo_developerValue">boostcamp Android01</string>
    <string name="appInfo_contact">이메일</string>
    <string name="appInfo_contactValue">andrunken1107@gmail.com</string>
  
</resources>
