<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_appInfo_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_appInfo"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="@string/info"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_appInfo_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/appInfo_developer"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_appInfo_toolbar" />

        <TextView
            android:id="@+id/tv_appInfo_developerValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/appInfo_developerValue"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_appInfo_developer"
            app:layout_constraintTop_toTopOf="@+id/tv_appInfo_developer" />

        <TextView
            android:id="@+id/tv_appInfo_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/appInfo_contact"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_appInfo_developerValue" />

        <TextView
            android:id="@+id/tv_appInfo_contactValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/appInfo_contactValue"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_appInfo_contact"
            app:layout_constraintTop_toTopOf="@+id/tv_appInfo_contact" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
